--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -rf ./dist && ./node_modules/.bin/tsc && cp ./src/plugin.json ./dist && cp -r ./src/partials ./dist && cp -r ./src/css ./dist  && cp -r ./src/img ./dist && cp ./src/plugin/*.js ./dist/plugin",
     "dev-build": "rm -rf ./dev-build && cp -r ./src ./src-tmp && ./node_modules/.bin/tsc --outdir ./src && mv ./src ./dev-build && mv ./src-tmp ./src",
-    "tsc" : "tsc",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-grafana": "cd /usr/local/Cellar/grafana/4.1.1/share/grafana/conf && grafana-server",
     "lint": "tslint -c tslint.json src/**/*.ts"
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/angular": "^1.6.2",
     "@types/lodash": "^4.14.50",
+    "@types/jquery": "^2.0.41",
     "typescript": "^2.1.5"
   },
   "devDependencies": {
